// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`copydml.sql > line 4 1`] = `
[
  "create table copydml_test (id serial, t text)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "copydml_test",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "id",
                  "is_local": true,
                  "location": 27,
                  "typeName": {
                    "location": 30,
                    "names": [
                      {
                        "String": {
                          "sval": "serial",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "t",
                  "is_local": true,
                  "location": 38,
                  "typeName": {
                    "location": 40,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`copydml.sql > line 14 1`] = `
[
  "copy (insert into copydml_test (t) values ('f') returning id) to stdout",
  {
    "stmts": [
      {
        "stmt": {
          "CopyStmt": {
            "query": {
              "InsertStmt": {
                "cols": [
                  {
                    "ResTarget": {
                      "location": 32,
                      "name": "t",
                    },
                  },
                ],
                "override": "OVERRIDING_NOT_SET",
                "relation": {
                  "inh": true,
                  "location": 18,
                  "relname": "copydml_test",
                  "relpersistence": "p",
                },
                "returningList": [
                  {
                    "ResTarget": {
                      "location": 58,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "id",
                              },
                            },
                          ],
                          "location": 58,
                        },
                      },
                    },
                  },
                ],
                "selectStmt": {
                  "SelectStmt": {
                    "limitOption": "LIMIT_OPTION_DEFAULT",
                    "op": "SETOP_NONE",
                    "valuesLists": [
                      {
                        "List": {
                          "items": [
                            {
                              "A_Const": {
                                "location": 43,
                                "sval": {
                                  "sval": "f",
                                },
                              },
                            },
                          ],
                        },
                      },
                    ],
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`copydml.sql > line 26 1`] = `
[
  "copy (insert into copydml_test default values) to stdout",
  {
    "stmts": [
      {
        "stmt": {
          "CopyStmt": {
            "query": {
              "InsertStmt": {
                "override": "OVERRIDING_NOT_SET",
                "relation": {
                  "inh": true,
                  "location": 18,
                  "relname": "copydml_test",
                  "relpersistence": "p",
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`copydml.sql > line 30 1`] = `
[
  "create rule qqq as on insert to copydml_test do instead nothing",
  {
    "stmts": [
      {
        "stmt": {
          "RuleStmt": {
            "event": "CMD_INSERT",
            "instead": true,
            "relation": {
              "inh": true,
              "location": 32,
              "relname": "copydml_test",
              "relpersistence": "p",
            },
            "rulename": "qqq",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`copydml.sql > line 43 1`] = `
[
  "create rule qqq as on update to copydml_test do instead nothing",
  {
    "stmts": [
      {
        "stmt": {
          "RuleStmt": {
            "event": "CMD_UPDATE",
            "instead": true,
            "relation": {
              "inh": true,
              "location": 32,
              "relname": "copydml_test",
              "relpersistence": "p",
            },
            "rulename": "qqq",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`copydml.sql > line 56 1`] = `
[
  "create rule qqq as on delete to copydml_test do instead nothing",
  {
    "stmts": [
      {
        "stmt": {
          "RuleStmt": {
            "event": "CMD_DELETE",
            "instead": true,
            "relation": {
              "inh": true,
              "location": 32,
              "relname": "copydml_test",
              "relpersistence": "p",
            },
            "rulename": "qqq",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`copydml.sql > line 70 1`] = `
[
  "create function qqq_trig() returns trigger as $$
begin
if tg_op in ('INSERT', 'UPDATE') then
    raise notice '% % %', tg_when, tg_op, new.id;
    return new;
else
    raise notice '% % %', tg_when, tg_op, old.id;
    return old;
end if;
end
$$ language plpgsql",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "qqq_trig",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "
begin
if tg_op in ('INSERT', 'UPDATE') then
    raise notice '% % %', tg_when, tg_op, new.id;
    return new;
else
    raise notice '% % %', tg_when, tg_op, old.id;
    return old;
end if;
end
",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 43,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "plpgsql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 245,
                },
              },
            ],
            "returnType": {
              "location": 35,
              "names": [
                {
                  "String": {
                    "sval": "trigger",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`copydml.sql > line 90 1`] = `
[
  "drop table copydml_test",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "copydml_test",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
